fixing readability so its less insane

--- a/themes/rocktopus/static/css/custom.css
+++ b/themes/rocktopus/static/css/custom.css
@@ -160,7 +160,7 @@
 }
 
 .color-scheme-dark .container {
-    color: #888888;
+    color: #BBB;
     background-color:#000; 
 }
 
